Fix overflow in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	overflow-x: hidden;
 	/* Create the parallax scrolling effect */
 	background-image: url('.././assets/images/bg/landing-bg-dark.svg');
 	background-attachment: fixed;
@@ -219,6 +220,7 @@
 	color: #fff;
 	background-image: url('.././assets/images/bg/stacked-bg-dark.svg');
 	padding: 100px 0;
+	overflow-x: hidden;
 	/* Create the parallax scrolling effect */
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -267,6 +269,7 @@
 #about {
 	color: #fff;
 	padding: 60px 0px 0px 0px;
+	overflow-x: hidden;
 	/* Create the parallax scrolling effect */
 	background-image: url('.././assets/images/bg/others-bg-dark.svg');
 	background-attachment: fixed;
@@ -309,6 +312,7 @@ h3 {
 #projects {
 	color: #fff;
 	padding: 100px 0;
+	overflow-x: hidden;
 	/* Create the parallax scrolling effect */
 	background-image: url('.././assets/images/bg/projects-bg-dark.svg');
 	background-attachment: fixed;
@@ -370,6 +374,7 @@ h3 {
 #contact {
 	color: #fff;
 	padding: 30px 0;
+	overflow-x: hidden;
 	/* Create the parallax scrolling effect */
 	background-image: url('.././assets/images/bg/others-bg-dark.svg');
 	background-attachment: fixed;
@@ -408,6 +413,7 @@ h3 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	overflow-x: hidden;
 	/* Create the parallax scrolling effect */
 	background-attachment: fixed;
 	background-position: center;
